--- a/src/styles/components/breadcrumb.css
+++ b/src/styles/components/breadcrumb.css
@@ -39,7 +39,7 @@
 
 .breadcrumb-area .breadcrumb-text {
   position: relative;
-  padding: 100px 0;
+  padding: 15vh 0 2vh 0;
 }
 
 .breadcrumb-area .breadcrumb-text,
