--- a/src/styles/travelline-style.css
+++ b/src/styles/travelline-style.css
@@ -13,7 +13,7 @@
 }
 
 #be-search-form {
-    background: rgba(26, 63, 72, .26);
+    background: #1a3f48;
     border: 1px solid #e8e8e8;
     border-radius: 8px;
     padding: 1rem;
